{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 457,
  "lineage": "19861386-0b7e-8fcd-1b66-616f3a12172c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091b6bf701773bc13",
            "arn": "arn:aws:ec2:us-east-1:011528267161:elastic-ip/eipalloc-091b6bf701773bc13",
            "association_id": "eipassoc-071471d0835833136",
            "domain": "vpc",
            "id": "eipalloc-091b6bf701773bc13",
            "instance": "i-045178e8afcadb948",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bc912de516f2ab28",
            "private_dns": "ip-10-0-0-75.ec2.internal",
            "private_ip": "10.0.0.75",
            "public_dns": "ec2-100-26-8-222.compute-1.amazonaws.com",
            "public_ip": "100.26.8.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-jenkins-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-jenkins-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.jenkins",
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dee55a3324dacead",
            "arn": "arn:aws:ec2:us-east-1:011528267161:elastic-ip/eipalloc-0dee55a3324dacead",
            "association_id": "eipassoc-024e5b2e2ce697618",
            "domain": "vpc",
            "id": "eipalloc-0dee55a3324dacead",
            "instance": "i-0ff342a8d67d62efe",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c32a797923922c04",
            "private_dns": "ip-10-0-0-233.ec2.internal",
            "private_ip": "10.0.0.233",
            "public_dns": "ec2-23-21-87-16.compute-1.amazonaws.com",
            "public_ip": "23.21.87.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-mongodb-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-mongodb-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.mongodb",
            "aws_security_group.mongodb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09dcb98f9bf9a4ec5",
            "arn": "arn:aws:ec2:us-east-1:011528267161:elastic-ip/eipalloc-09dcb98f9bf9a4ec5",
            "association_id": "eipassoc-0f2ea5d091f821517",
            "domain": "vpc",
            "id": "eipalloc-09dcb98f9bf9a4ec5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0385f19e8b9822b66",
            "private_dns": "ip-10-0-0-212.ec2.internal",
            "private_ip": "10.0.0.212",
            "public_dns": "ec2-35-170-25-121.compute-1.amazonaws.com",
            "public_ip": "35.170.25.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-nat-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f381845cca60bbc8",
            "arn": "arn:aws:ec2:us-east-1:011528267161:elastic-ip/eipalloc-0f381845cca60bbc8",
            "association_id": "eipassoc-0e3465f15bbcce218",
            "domain": "vpc",
            "id": "eipalloc-0f381845cca60bbc8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-045c69f5bd7dfc4c4",
            "private_dns": "ip-10-0-1-21.ec2.internal",
            "private_ip": "10.0.1.21",
            "public_dns": "ec2-44-196-127-86.compute-1.amazonaws.com",
            "public_ip": "44.196.127.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-nat-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07396bcfc8fea5bf2",
            "arn": "arn:aws:ec2:us-east-1:011528267161:elastic-ip/eipalloc-07396bcfc8fea5bf2",
            "association_id": "eipassoc-06d56dac2512acbbf",
            "domain": "vpc",
            "id": "eipalloc-07396bcfc8fea5bf2",
            "instance": "i-09e20b6176779089b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d46305f2435738f0",
            "private_dns": "ip-10-0-1-72.ec2.internal",
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-3-91-165-95.compute-1.amazonaws.com",
            "public_ip": "3.91.165.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-sonarqube-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-sonarqube-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.sonarqube",
            "aws_security_group.sonarqube",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7d80731ae1b2435",
            "arn": "arn:aws:ec2:us-east-1:011528267161:instance/i-03fd28f6a97120e50",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "placement-portal-app-instance-profile",
            "id": "i-03fd28f6a97120e50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "placement-portal-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-062b384b0a3d36fb4",
            "private_dns": "ip-10-0-0-252.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.252",
            "public_dns": "ec2-3-81-1-231.compute-1.amazonaws.com",
            "public_ip": "3.81.1.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059817bf6d545f6d6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b3552d478e96049",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-backend",
              "Type": "backend"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-backend",
              "Type": "backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0960bc2a3a495ac57"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mongodb",
            "aws_iam_instance_profile.app_instance",
            "aws_iam_role.app_instance",
            "aws_instance.mongodb",
            "aws_security_group.backend",
            "aws_security_group.mongodb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7d80731ae1b2435",
            "arn": "arn:aws:ec2:us-east-1:011528267161:instance/i-010eb91e8a1d5d4b2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "placement-portal-app-instance-profile",
            "id": "i-010eb91e8a1d5d4b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "placement-portal-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05b297dd11854329f",
            "private_dns": "ip-10-0-1-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be8e0112e40e68a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8c16767eb2a1386",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-frontend",
              "Type": "frontend"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-frontend",
              "Type": "frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-046e76c7c538c53c5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mongodb",
            "aws_iam_instance_profile.app_instance",
            "aws_iam_role.app_instance",
            "aws_instance.backend",
            "aws_instance.mongodb",
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_security_group.backend",
            "aws_security_group.frontend",
            "aws_security_group.mongodb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7d80731ae1b2435",
            "arn": "arn:aws:ec2:us-east-1:011528267161:instance/i-045178e8afcadb948",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045178e8afcadb948",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "placement-portal-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bc912de516f2ab28",
            "private_dns": "ip-10-0-0-75.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.75",
            "public_dns": "ec2-100-26-8-222.compute-1.amazonaws.com",
            "public_ip": "100.26.8.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ad74d95b03b7ca6f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b3552d478e96049",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-jenkins"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0715a83d3d650a5e9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7d80731ae1b2435",
            "arn": "arn:aws:ec2:us-east-1:011528267161:instance/i-0ff342a8d67d62efe",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff342a8d67d62efe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "placement-portal-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c32a797923922c04",
            "private_dns": "ip-10-0-0-233.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-040f94abf8f59041d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b3552d478e96049",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-mongodb",
              "Type": "database"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-mongodb",
              "Type": "database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e32d566342b7cd05"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mongodb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7d80731ae1b2435",
            "arn": "arn:aws:ec2:us-east-1:011528267161:instance/i-09e20b6176779089b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e20b6176779089b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "placement-portal-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d46305f2435738f0",
            "private_dns": "ip-10-0-1-72.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-3-91-165-95.compute-1.amazonaws.com",
            "public_ip": "3.91.165.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00004187a3ca24921",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8c16767eb2a1386",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-sonarqube"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-sonarqube"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0907a6d09910050ed"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sonarqube",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:internet-gateway/igw-06a5028deabf0d91f",
            "id": "igw-06a5028deabf0d91f",
            "owner_id": "011528267161",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-igw"
            },
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:011528267161:loadbalancer/app/placement-portal-alb/f9c0c06e229dc508",
            "arn_suffix": "app/placement-portal-alb/f9c0c06e229dc508",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "placement-portal-alb-893991990.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:011528267161:loadbalancer/app/placement-portal-alb/f9c0c06e229dc508",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "placement-portal-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fd32e740b8d16a18"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08b3552d478e96049"
              },
              {
                "subnet_id": "subnet-0c8c16767eb2a1386"
              }
            ],
            "subnets": [
              "subnet-08b3552d478e96049",
              "subnet-0c8c16767eb2a1386"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-alb"
            },
            "vpc_id": "vpc-0942fc731d3dc153c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:011528267161:listener/app/placement-portal-alb/f9c0c06e229dc508/53b5156e6a3b18ce",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:011528267161:targetgroup/placement-portal-frontend-tg/941d7804acf4b1d0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:011528267161:listener/app/placement-portal-alb/f9c0c06e229dc508/53b5156e6a3b18ce",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:011528267161:loadbalancer/app/placement-portal-alb/f9c0c06e229dc508",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:011528267161:targetgroup/placement-portal-backend-tg/934ba9edc908e6cf",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:011528267161:listener-rule/app/placement-portal-alb/f9c0c06e229dc508/53b5156e6a3b18ce/c5b46c6d54269f58",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:011528267161:listener-rule/app/placement-portal-alb/f9c0c06e229dc508/53b5156e6a3b18ce/c5b46c6d54269f58",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:011528267161:listener/app/placement-portal-alb/f9c0c06e229dc508/53b5156e6a3b18ce",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:011528267161:targetgroup/placement-portal-backend-tg/934ba9edc908e6cf",
            "arn_suffix": "targetgroup/placement-portal-backend-tg/934ba9edc908e6cf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:011528267161:targetgroup/placement-portal-backend-tg/934ba9edc908e6cf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:011528267161:loadbalancer/app/placement-portal-alb/f9c0c06e229dc508"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "placement-portal-backend-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-backend-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-backend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:011528267161:targetgroup/placement-portal-frontend-tg/941d7804acf4b1d0",
            "arn_suffix": "targetgroup/placement-portal-frontend-tg/941d7804acf4b1d0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:011528267161:targetgroup/placement-portal-frontend-tg/941d7804acf4b1d0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:011528267161:loadbalancer/app/placement-portal-alb/f9c0c06e229dc508"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "placement-portal-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-frontend-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:011528267161:targetgroup/placement-portal-backend-tg/934ba9edc908e6cf-20250605184527403100000002",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:011528267161:targetgroup/placement-portal-backend-tg/934ba9edc908e6cf",
            "target_id": "i-03fd28f6a97120e50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mongodb",
            "aws_iam_instance_profile.app_instance",
            "aws_iam_role.app_instance",
            "aws_instance.backend",
            "aws_instance.mongodb",
            "aws_lb_target_group.backend",
            "aws_security_group.backend",
            "aws_security_group.mongodb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:011528267161:targetgroup/placement-portal-frontend-tg/941d7804acf4b1d0-20250605151443113900000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:011528267161:targetgroup/placement-portal-frontend-tg/941d7804acf4b1d0",
            "target_id": "i-010eb91e8a1d5d4b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mongodb",
            "aws_iam_instance_profile.app_instance",
            "aws_iam_role.app_instance",
            "aws_instance.backend",
            "aws_instance.frontend",
            "aws_instance.mongodb",
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_security_group.backend",
            "aws_security_group.frontend",
            "aws_security_group.mongodb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09dcb98f9bf9a4ec5",
            "association_id": "eipassoc-0f2ea5d091f821517",
            "connectivity_type": "public",
            "id": "nat-08b04dcc5ec0c5c97",
            "network_interface_id": "eni-0385f19e8b9822b66",
            "private_ip": "10.0.0.212",
            "public_ip": "35.170.25.121",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08b3552d478e96049",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f381845cca60bbc8",
            "association_id": "eipassoc-0e3465f15bbcce218",
            "connectivity_type": "public",
            "id": "nat-0c8811e50d9f0c61c",
            "network_interface_id": "eni-045c69f5bd7dfc4c4",
            "private_ip": "10.0.1.21",
            "public_ip": "44.196.127.86",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c8c16767eb2a1386",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-nat-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:route-table/rtb-05e4d10f50b79d11e",
            "id": "rtb-05e4d10f50b79d11e",
            "owner_id": "011528267161",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08b04dcc5ec0c5c97",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:route-table/rtb-083ee6a2c3eac00f7",
            "id": "rtb-083ee6a2c3eac00f7",
            "owner_id": "011528267161",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c8811e50d9f0c61c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:route-table/rtb-06904f53b2b14cd4c",
            "id": "rtb-06904f53b2b14cd4c",
            "owner_id": "011528267161",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06a5028deabf0d91f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06404f6382887b7ee",
            "route_table_id": "rtb-05e4d10f50b79d11e",
            "subnet_id": "subnet-0c82f412efa5af6e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006a7c43f65101c9e",
            "route_table_id": "rtb-083ee6a2c3eac00f7",
            "subnet_id": "subnet-0554cb00f8a88bbf2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df6375bdc3f3efca",
            "route_table_id": "rtb-06904f53b2b14cd4c",
            "subnet_id": "subnet-08b3552d478e96049"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a99bce77d35e5c3",
            "route_table_id": "rtb-06904f53b2b14cd4c",
            "subnet_id": "subnet-0c8c16767eb2a1386"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:security-group/sg-0fd32e740b8d16a18",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd32e740b8d16a18",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "placement-portal-alb-20250605035543358700000002",
            "name_prefix": "placement-portal-alb-",
            "owner_id": "011528267161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:security-group/sg-0960bc2a3a495ac57",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0960bc2a3a495ac57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend API from anywhere",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "placement-portal-backend-2025060503554927560000000a",
            "name_prefix": "placement-portal-backend-",
            "owner_id": "011528267161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-backend-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:security-group/sg-046e76c7c538c53c5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046e76c7c538c53c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Frontend from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "placement-portal-frontend-2025060503554992630000000b",
            "name_prefix": "placement-portal-frontend-",
            "owner_id": "011528267161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-frontend-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:security-group/sg-0715a83d3d650a5e9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0715a83d3d650a5e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins Web UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "placement-portal-jenkins-20250605035543359100000003",
            "name_prefix": "placement-portal-jenkins-",
            "owner_id": "011528267161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-jenkins-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:security-group/sg-0e32d566342b7cd05",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e32d566342b7cd05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MongoDB",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "placement-portal-mongodb-20250605165557782700000001",
            "name_prefix": "placement-portal-mongodb-",
            "owner_id": "011528267161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-mongodb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-mongodb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:security-group/sg-0907a6d09910050ed",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0907a6d09910050ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SonarQube Web UI",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "placement-portal-sonarqube-20250605035545096400000004",
            "name_prefix": "placement-portal-sonarqube-",
            "owner_id": "011528267161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-sonarqube-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-sonarqube-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:subnet/subnet-0c82f412efa5af6e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c82f412efa5af6e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011528267161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-private-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-private-1",
              "Type": "private"
            },
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:subnet/subnet-0554cb00f8a88bbf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0554cb00f8a88bbf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011528267161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-private-2",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-private-2",
              "Type": "private"
            },
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:subnet/subnet-08b3552d478e96049",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b3552d478e96049",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "011528267161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-public-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-public-1",
              "Type": "public"
            },
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:subnet/subnet-0c8c16767eb2a1386",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8c16767eb2a1386",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "011528267161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-public-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-public-2",
              "Type": "public"
            },
            "vpc_id": "vpc-0942fc731d3dc153c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528267161:vpc/vpc-0942fc731d3dc153c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ea08e0d4d285dce",
            "default_route_table_id": "rtb-06a2e87627a7a35a8",
            "default_security_group_id": "sg-083f822557d7c79cb",
            "dhcp_options_id": "dopt-0ab49bcb2080ac47d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0942fc731d3dc153c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a2e87627a7a35a8",
            "owner_id": "011528267161",
            "tags": {
              "Environment": "dev",
              "Name": "placement-portal-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "placement-portal-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}